# icingaplugin-rs

./: Cargo.toml  README.md
src/: check.rs  lib.rs  utils.rs
